# NER_PROJECT

./: README.md  dotenv.sh  pyproject.toml
config/: cloud_config.py  file_config.py  gliner_config.py
data/raw/: test.parquet
src/: inferencer.py  main.py  preprocess.py  process.py  sample.ipynb
src/inference/gliner/: inference.py  onnx_test.py  postprocessor.py  textprocessor.py
src/inference/llm/: get_llm.py  inference.py  llm_config.py  ner_struct.py  retry_handler.py  validate_lang.py
