[project]
name = "ner-project"
version = "0.1.0"
description = ""
authors = [
    {name = "Chanjun-kim",email = "nice3803@gmail.com"}
]
readme = "README.md"
requires-python = ">=3.9"
dependencies = [
]

[tool.poetry]
packages = [{include = "ner_project", from = "src"}]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
